--- a/docs/content/developer/iota-101/objects/shared-owned.mdx
+++ b/docs/content/developer/iota-101/objects/shared-owned.mdx
@@ -3,24 +3,46 @@ title: Shared versus Owned Objects
 description: On IOTA, you can use shared objects, owned objects, or both in your transactions. Weigh the benefits of each to decide the best approach for your project.
 ---
 
-Objects on IOTA can be shared (accessible for reads and writes by any transaction) or owned (accessible for reads and writes by transactions signed by their owner).  Many applications can be built using a solution that either uses shared objects or only owned objects, with trade-offs for each that need to be weighed.
+# Shared versus Owned Objects
 
-Transactions that use only owned objects benefit from very low latency to finality, because they do not need to go through consensus.  On the other hand, the fact that only the owner of the object can access it complicates processes that need to work with objects owned by multiple parties, and access to very hot objects needs to be coordinated off-chain.
+On IOTA, objects can be:
+* **Shared**: Accessible for reads and writes by any transaction
+* **owned**: Accessible for reads and writes by transactions signed by their owner.
 
-Transactions that access one or more shared objects require consensus to sequence reads and writes to those objects, resulting in a slightly higher gas cost and increased latency.
+Both shared and owned objects offer unique advantages and trade-offs
+that you should carefully consider when designing your application.
 
-Transactions that access multiple shared objects, or particularly popular objects, might have increases in latency due to contention. However, the advantage of using shared objects lies in the flexibility of allowing multiple addresses to access the same object in a coordinated manner.
+## Trade-Offs Between Shared and Owned Objects
 
-To summarize, applications that are extremely sensitive to latency or gas costs, that do not need to handle complex multi-party transactions, or that already require an off-chain service could benefit from a design that only uses owned objects. Applications that require coordination between multiple parties will likely benefit from using shared objects.
+### Owned Objects
 
-For more information on the types of objects that IOTA supports, see [Object Ownership](object-ownership/object-ownership.mdx).
+Transactions involving only owned objects benefit from very low latency to finality because they bypass consensus.
+However, only the owner can access these objects,
+which complicates processes requiring interaction between multiple parties. 
+Access to frequently used (hot) objects must be coordinated off-chain.
+
+### Shared Objects
+
+Transactions that involve shared objects require consensus to manage reads and writes, 
+leading to slightly higher [gas](../../../about-iota/tokenomics/gas-in-iota.mdx) costs and increased latency.
+When multiple shared objects or particularly popular objects are accessed,
+contention may further increase latency.
+However, shared objects offer flexibility,
+
+:::info
+
+For more information on object types in IOTA, see [Object Ownership](object-ownership/object-ownership.mdx).
+
+:::
 
 ## Example: Escrow
 
-The Escrow example demonstrates the trade-offs between shared objects and owned objects by implementing the same application in both styles. It implements a service that allows two addresses to perform a trustless swap of objects with each other (a "trade") with the service holding their objects in escrow.
+The [following example](https://github.com/iotaledger/iota/blob/93e6b4845a481300ed4a56ab4ac61c5ccb6aa008/examples/move/escrow/sources/lock.move) demonstrates the trade-offs between shared and owned objects
+by implementing an escrow service in both styles.
+The service allows two parties to perform a trustless swap of objects,
+with a third party holding the objects in escrow.
 
 ### `Locked<T>` and `Key`
-[Code Sample](https://github.com/iotaledger/iota/blob/93e6b4845a481300ed4a56ab4ac61c5ccb6aa008/examples/move/escrow/sources/lock.move)
 
 Both implementations use a primitive for locking values, which offers the following interface:
 
@@ -31,15 +53,15 @@ module escrow::lock {
 }
 ```
 
-Any `T: store` can be locked, to get a `Locked<T>` and a corresponding `Key`, and conversely, the locked value and its corresponding key can be consumed to get back the wrapped object.
+Any `T: store` can be locked to get a `Locked<T>` and a corresponding `Key`.
+The locked value and its key can then be consumed to retrieve the wrapped object.
+This interface ensures that locked values cannot be modified without first being unlocked,
+making tampering detectable by tracking the key’s ID.
 
-The important property that this interface provides is that locked values cannot be modified except by unlocking them first (and later relocking them).  Because unlocking consumes the key, tampering with a locked value can be detected by remembering the ID of the key that it was locked with.  This prevents situations where one party in a swap changes the object they are offering to reduce its value.
+### Owned Objects
 
-### Owned objects
-
-[Code Sample](https://github.com/iotaledger/iota/blob/93e6b4845a481300ed4a56ab4ac61c5ccb6aa008/examples/move/escrow/sources/owned.move)
-
-The protocol for swapping via escrow implemented using owned objects starts with both parties locking their respective objects. 
+The protocol for swapping via [escrow with owned objects](https://github.com/iotaledger/iota/blob/93e6b4845a481300ed4a56ab4ac61c5ccb6aa008/examples/move/escrow/sources/owned.move) begins
+with both parties locking their respective objects.
 
 ```mermaid
 flowchart TD
@@ -55,9 +77,10 @@ flowchart TD
     end
 ```
 
-This is used to prove that the object has not been tampered with after the swap has been agreed to. If either party doesn't want to proceed at this stage, they just unlock their object.
+This locking mechanism ensures that objects cannot be altered once the swap is agreed upon
+. If either party decides not to proceed, they can simply unlock their object.
 
-Assuming both parties are happy to continue, the next step requires both parties to swap the keys.
+If both parties agree to continue, they exchange the keys:
 
 ```mermaid
 flowchart LR
@@ -65,7 +88,7 @@ flowchart LR
     Seller--fa:fa-key key_s-->Buyer
 ```
 
-A third party acts as custodian. The custodian holds objects that are waiting for their counterparts to arrive and when they arrive, it matches them up to complete the swap.
+A third party acts as a custodian, holding the objects until both have arrived, then completing the swap:
 
 ```move
 public fun create<T: key + store>(
@@ -115,9 +138,9 @@ flowchart TB
     end
 ```
 
-The `create` function prepares the `Escrow` request and sends it to the `custodian`.  The object being offered by this party is passed in, locked, with its key, and the object being requested is identified by the ID of the key it was locked with.  While preparing the request, the offered object is unlocked, while remembering the ID of its key.
-
-Although the custodian is trusted to preserve liveness (to complete swaps if it owns both sides of a swap and to return objects if requested), all other correctness properties are maintained in Move: Even though the custodian owns both objects being swapped, the only valid action they are permitted to take is to match them up with their correct counterpart to finish the swap, or to return them:
+The `create` function prepares the `Escrow` request and sends it to the custodian.
+The object being offered is passed in locked, along with its key and the ID of the object being requested.
+The custodian is trusted to complete the swap if it holds both sides or to return the objects if requested.
 
 ```mermaid
 flowchart TB
@@ -160,28 +183,28 @@ public fun swap<T: key + store, U: key + store>(
     object::delete(id1);
     object::delete(id2);
 
-    // Make sure the sender and recipient match each other
+    // Ensure sender and recipient match each other
     assert!(sender1 == recipient2, EMismatchedSenderRecipient);
     assert!(sender2 == recipient1, EMismatchedSenderRecipient);
 
-    // Make sure the objects match each other and haven't been modified
-    // (they remain locked).
+    // Ensure the objects match and haven't been modified
     assert!(escrowed_key1 == exchange_key2, EMismatchedExchangeObject);
     assert!(escrowed_key2 == exchange_key1, EMismatchedExchangeObject);
 
-    // Do the actual swap
+    // Perform the swap
     transfer::public_transfer(escrowed1, recipient1);
     transfer::public_transfer(escrowed2, recipient2);
 }
 ```
 
-The `swap` function checks that senders and recipients match and that each party wants the object that the other party is offering, by comparing their respective key IDs.  If the custodian tried to match together two unrelated escrow requests to swap, the transaction would not succeed.
+The `swap` function verifies that the senders and recipients match and that each party wants the object being offered by the other.
+The custodian’s role is limited to matching the objects correctly or returning them, ensuring the correctness of the swap.
 
-### Shared objects
+### Shared Objects
 
-[Code Sample](https://github.com/iotaledger/iota/blob/93e6b4845a481300ed4a56ab4ac61c5ccb6aa008/examples/move/escrow/sources/shared.move)
+In the [shared object example](https://github.com/iotaledger/iota/blob/93e6b4845a481300ed4a56ab4ac61c5ccb6aa008/examples/move/escrow/sources/shared.move),
+the protocol starts with the first party locking the object they want to swap:
 
-The protocol in the shared object case is less symmetric, but still starts with the first party locking the object they want to swap. 
 ```mermaid
 flowchart TB
     B["Locked&ltfa:fa-coins B&gt, fa:fa-key key_b"]
@@ -192,7 +215,7 @@ flowchart TB
     end
 ```
 
-The second party can then view the object that was locked, and if they decide they want to swap with it, they indicate their interest by creating a swap request:
+The second party can view the locked object, and if they wish to swap, they create a swap request:
 
 ```mermaid
 flowchart TB
@@ -228,7 +251,8 @@ public fun create<T: key + store>(
 }
 ```
 
-This time the `create` request accepts the object being escrowed directly (not locked), and creates a shared `Escrow` object.  The request remembers the address that sent it (who is allowed to reclaim the object if the swap hasn't already happened), and the intended recipient, who is then expected to continue the swap by providing the object they initially locked:
+This request creates a shared `Escrow` object that remembers the sender, recipient, and the object being escrowed.
+The recipient is expected to complete the swap by providing the object they initially locked:
 
 ```mermaid
 flowchart TB
@@ -242,7 +266,6 @@ flowchart TB
 
     swap--fa:fa-coins B-->Seller
 ```
-
 
 ```move
 public fun swap<T: key + store, U: key + store>(
@@ -270,14 +293,8 @@ public fun swap<T: key + store, U: key + store>(
 }
 ```
 
-Even though the `Escrow` object is a shared object that is accessible by anyone, the Move interface ensures that only the original sender and the intended recipient can successfully interact with it. `swap` checks that the locked object matches the object that was requested when the `Escrow` was created (again, by comparing key IDs) and assumes that the intended recipient wants the escrowed object (if they did not, they would not have called `swap`).
+Even though the `Escrow` object is a shared object accessible by anyone,
+the Move interface ensures that only the original sender and the intended recipient can successfully interact with it.
+The `swap` function checks that the locked object matches the object requested when the `Escrow` was created,
+completing the swap if all checks pass.
 
-Assuming all checks pass, the object held in `Escrow` is extracted, its wrapper is deleted and it is returned to the first party.  The locked object offered by the first party is also unlocked and sent to the second party, completing the swap.
-
-### Comparison
-
-This topic explores two ways to implement a swap between two objects.  In both cases there is a point at which one party has made a request and the other has not responded.  At this point, both parties may want to access the `Escrow` object: One to cancel the swap, and the other to complete it.
-
-In one case, the protocol uses only owned objects but requires a custodian to act as an intermediary. This has the advantage of avoiding the costs and latencies of consensus altogether, but involves more steps and requires trusting a third party for liveness.
-
-In the other case, the object is custodied on chain in a shared object.  This requires consensus but involves fewer steps, and no third party.
