--- a/docs/content/developer/iota-101/objects/versioning.mdx
+++ b/docs/content/developer/iota-101/objects/versioning.mdx
@@ -3,7 +3,17 @@ title: Object and Package Versioning
 description: Versioning provides the ability to upgrade packages and objects on the IOTA network.
 ---
 
-You reference every object stored on chain by an ID and version. When a transaction modifies an object, it writes the new contents to an on-chain reference with the same ID but a later version. This means that a single object (with ID `I`) might appear in multiple entries in the distributed store:
+In IOTA, every object stored on-chain is referenced by an ID and a version.
+When a transaction modifies an object,
+it creates a new version of that object while keeping the same ID.
+This ensures a linear history for each object, where only the latest version is accessible to transactions.
+
+## Object Versioning
+
+### How Versioning Works
+
+When a transaction modifies an object with ID `I`, it creates a new version with the same ID but a later version.
+For example:
 
 ```
 (I, v0) => ...
@@ -11,41 +21,46 @@ You reference every object stored on chain by an ID and version. When a transact
 (I, v2) => ...  # v1 < v2
 ```
 
-Despite appearing multiple times in the store, only one version of the object is available to transactions - the latest version (v2 in the previous example). Moreover, only one transaction can modify the object at that version to create a new version, guaranteeing a linear history (`v1` was created in a state where `I` was at `v0`, and `v2` was created in a state where `I` was at `v1`).
+Even though multiple versions of the object may exist in the store,
+only the latest version (`v2` in this example) is accessible to transactions.
+The versioning system guarantees that only one transaction can modify an object at a time, ensuring a linear history.
 
-Versions are strictly increasing and (ID, version) pairs are never re-used. This structure allows node operators to prune their stores of old object versions that are now inaccessible, if they choose. This is not a requirement, though, as node operators might keep prior object versions around to serve requests for an object's history, either from other nodes that are catching up, or from RPC requests.
+Versions are strictly increasing, and (ID, version) pairs are never reused.
+This allows node operators to prune old object versions if they choose,
+although they might keep prior versions to serve requests for an object's history.
 
-## Move objects
+### Move Objects
 
-IOTA uses [Lamport timestamps](https://en.wikipedia.org/wiki/Lamport_timestamp) in its versioning algorithm for objects. The use of Lamport timestamps guarantees that versions never get re-used as the new version for objects touched by a transaction is one greater than the latest version among all input objects to the transaction. For example, a transaction transferring an object `O` at version 5 using a gas object `G` at version 3 updates both `O` and `G` versions to `1 + max(5, 3) = 6` (version 6).
+IOTA uses [Lamport timestamps](https://en.wikipedia.org/wiki/Lamport_timestamp) in its versioning algorithm for objects.
+The use of Lamport timestamps ensures that versions are never reused.
+The new version for objects touched by a transaction is one greater than the latest version among all input objects to the transaction.
+For example, a transaction transferring an object `O` at version 5 using a gas object `G` at version 3 updates both `O` and `G` to version 6.
 
-The following sections detail the relevance of Lamport versions for maintaining the "no (ID, version) re-use" invariant or for accessing an object as a transaction input changes depending on that object's ownership.
+#### Address-Owned Objects
 
-### Address-owned objects
+[Address-owned objects](object-ownership/address-owned.mdx) must be referenced by their specific ID and version in a transaction.
+When a validator signs a transaction using an owned object, that object version is locked to that transaction.
+Validators will reject other transactions that attempt to use the same object version, preventing equivocation.
 
-You must reference address-owned transaction inputs at a specific ID and version. When a validator signs a transaction with an owned object input at a specific version, that version of the object is locked to that transaction. Validators reject requests to sign other transactions that require the same input (same ID and version).
+#### Immutable Objects
 
-If `F + 1` validators sign one transaction that takes an object as input, and a different `F + 1` validators sign a different transaction that takes the same object as input, that object (and all the other inputs to both transactions) is equivocated, meaning they cannot be used for any further transactions in that epoch. This is because neither transaction can form a quorum without relying on a signature from a validator that has already committed the object to a different transaction, which it cannot get. All locks are reset at the end of the epoch, which frees the objects again.
+[Immutable objects](object-ownership/immutable.mdx) are referenced by their ID and version,
+but they do not need to be locked since their contents and versions do not change.
+The version is relevant because it identifies when the object became immutable.
 
-:::info
+#### Shared Objects
 
-Only an object's owner can equivocate it, but this is not a desirable thing to do. You can avoid equivocation by carefully managing the versions of address-owned input objects: never attempt to execute two different transactions that use the same object. If you don't get a definite success or failure response from the network for a transaction, assume that the transaction might have gone through, and do not re-use any of its objects for different transactions.
+[Shared objects](object-ownership/shared.mdx) are referenced by their ID, the version they were shared at,
+and whether they are accessed mutably.
+The exact version accessed is determined during transaction scheduling by consensus,
+ensuring proper sequencing of reads and writes.
 
-:::
+#### Wrapped Objects
 
-### Immutable objects
-
-Like address-owned objects, you reference immutable objects at an ID and version, but they do not need to be locked as their contents and versions do not change. Their version is relevant because they could have started life as an address-owned object before being frozen. The given version identifies the point at which they became immutable.
-
-### Shared objects
-
-Specifying a shared transaction input is slightly more complex. You reference it by its ID, the version it was shared at, and a flag indicating whether it is accessed mutably. You don't specify the precise version the transaction accesses because consensus decides that during transaction scheduling. When scheduling multiple transactions that touch the same shared object, validators agree the order of those transactions, and pick each transaction's input versions for the shared object accordingly (one transaction's output version becomes the next transaction's input version, and so on).
-
-Shared transaction inputs that you reference immutably participate in scheduling, but don't modify the object or increment its version.
-
-### Wrapped objects
-
-You can't access wrapped objects by their ID in the object store, you must access them by the object that wraps them. Consider the following example that creates a `make_wrapped` function with an `Inner` object, wrapped in an `Outer` object, which is returned to the transaction sender.
+[Wrapped objects](object-ownership/wrapped.mdx) are accessed through the object that wraps them,
+not directly by their ID.
+For example, if an `Inner` object is wrapped inside an `Outer` object, you must access `Inner` via `Outer`.
+Validators will reject transactions that directly reference wrapped objects. However, wrapped objects can be unwrapped, making them accessible by their ID again.
 
 ```move
 module example::wrapped {
@@ -76,9 +91,16 @@ module example::wrapped {
 }
 ```
 
-The owner of `Outer` in this example must specify it as the transaction input and then access its `inner` field to read the instance of `Inner`. Validators refuse to sign transactions that directly specify wrapped objects (like the `inner` of an `Outer`) as inputs. As a result, you don't need to specify a wrapped object's version in a transaction that reads that object.
+When working with an `Outer` object the owner must specify it as the transaction input
+to gain access to its `inner` field.
+This allows interacting with the `Inner` instance within.
+It's important to note that validators will reject any transactions that directly attempt to specify wrapped objects, 
+such as the `inner` of an `Outer`, as inputs.
 
-Wrapped objects can eventually become "unwrapped", meaning that they are once again accessible at their ID:
+Consequently, when a transaction involves reading a wrapped object,
+you aren't required to specify the version of that object.
+
+Over time, wrapped objects may become "unwrapped," making them accessible again by their original ID:
 
 ```move
 module example::wrapped {
@@ -92,55 +114,81 @@ module example::wrapped {
 }
 ```
 
-The `unwrap` function in the previous code takes an instance of `Outer`, destroys it, and sends the `Inner` back to the sender. After calling this function, the previous owner of `Outer` can access `Inner` directly by its ID because it is now unwrapped. Wrapping and unwrapping of an object can happen multiple times across its lifespan, and the object retains its ID across all those events.
+The `unwrap` function in the above example operates by taking an instance of `Outer`, destroying it,
+and returning the `Inner` object back to you, the sender.
+Once this function is called the previous owner of `Outer`, can directly access `Inner` using its ID,
+as it is now unwrapped.
+Throughout the lifespan of an object, it can be wrapped and unwrapped multiple times,
+yet it will always retain its original ID.
 
-The Lamport timestamp-based versioning scheme ensures that the version that an object is unwrapped at is always greater than the version it was wrapped at, to prevent version re-use.
+To prevent version re-use, the system employs a Lamport timestamp-based versioning scheme.
+This ensures the version at which an object is unwrapped is always greater than the version at which it was wrapped.
 
-- After a transaction, `W`, where object `I` is wrapped by object `O`, the `O` version is greater than or equal to the `I` version. This means one of the following conditions is true:
-    - `I` is an input so has a strictly lower version.
-    - `I` is new and has an equal version.
-- After a later transaction unwrapping `I` out of `O`, the following must be true:
-    - The `O` input version is greater than or equal to its version after `W` because it is a later transaction, so the version can only have increased.
-    - The `I` version in the output must be strictly greater than the `O` input version.
+Here’s how it works:
 
-This leads to the following chain of inequalities for I's version before wrapping:
+- After a wrapping transaction, `W`, where object `I` is wrapped within object `O`, the version of `O` must be greater than or equal to the version of `I`. This implies one of the following scenarios:
+  - If `I` is an input, its version is strictly lower.
+  - If `I` is newly created, its version is equal to `O`.
+- After a subsequent transaction unwrapping `I` from `O`, the following conditions hold true:
+  - The version of `O` as an input must be greater than or equal to its version after `W` because it is part of a later transaction, implying that the version has increased.
+  - The version of `I` in the output must be strictly greater than the version of `O` as an input.
 
-- less than or equal to O's version after wrapping
-- less than or equal to O's version before unwrapping
-- less than I's version after unwrapping
+This leads to the following chain of inequalities for the version of `I` before wrapping:
 
-So the `I` version before wrapping is less than the `I` version after unwrapping.
+- It is less than or equal to `O`'s version after wrapping.
+- It is less than or equal to `O`'s version before unwrapping.
+- It is less than the version of `I` after unwrapping.
 
-### Dynamic fields
+So, the version of `I` before wrapping is always less than its version after unwrapping.
 
-From a versioning perspective, values held in dynamic fields behave like wrapped objects:
 
-- They are only accessible via the field's parent object, not as direct transaction inputs.
-- Based on the previous point, you do not need to supply their IDs or versions with the transaction inputs.
-- Lamport timestamp-based versioning makes sure that when a field contains an object and a transaction removes that field, its value becomes accessible by its ID and the value's version has been incremented to a previously unused version.
+#### Dynamic Fields
+
+From a versioning standpoint, dynamic fields behave similarly to wrapped objects:
+
+- These fields are accessible only through their parent object, meaning they cannot be used as direct transaction inputs.
+- Consequently, you don't need to include their IDs or versions in transaction inputs.
+- The Lamport timestamp-based versioning ensures that when a field containing an object is removed, the object becomes accessible by its ID, with its version incremented to a unique, previously unused version.
 
 :::info
 
-One distinction dynamic fields have to wrapped objects is that if a transaction modifies a dynamic object field, its version is incremented in that transaction, where a wrapped object's version would not be.
+One key difference between dynamic fields and wrapped objects is that if a transaction modifies a dynamic field,
+its version is incremented during that transaction.
+In contrast, a wrapped object's version remains unchanged.
 
 :::
 
-Adding a new dynamic field to a parent object also creates a `Field` object, responsible for associating the field name and value with that parent. Unlike other newly created objects, the ID for the resulting instance of `Field` is not created using `iota::object::new`. Instead, it is computed as a hash of the parent object ID and the type and value of the field name, so that you can use it to look-up the `Field` via its parent and name.
+When you add a new dynamic field to a parent object,
+it creates a `Field` object that links the field name and value to the parent.
+Unlike other newly created objects,
+the ID for this `Field` instance is not generated using [`iota::object::new`](../../../references/framework/iota-framework/object.mdx#function-new).
+Instead, it's computed as a hash of the parent object ID along with the field name’s type and value,
+allowing you to look up the `Field` via its parent and name.
 
-When you remove a field, IOTA deletes its associated `Field`, and if you add a new field with the same name, IOTA creates a new instance with the same ID. Versioning using Lamport timestamps, coupled with dynamic fields being only accessible through their parent object, ensures that (ID, version) pairs are not reused in the process:
+If you remove a field, IOTA deletes the associated `Field`, and if you add a new field with the same name,
+IOTA generates a new instance with the same ID.
+Lamport timestamp-based versioning, combined with the fact that dynamic fields are only accessible through their parent object,
+guarantees that (ID, version) pairs are not reused:
 
-- The transaction that deletes the original field increments the parent's version to be greater than the deleted field's version.
-- The transaction that creates the new version of the same field creates the field with a version that is greater than the parent's version.
+- The transaction that deletes the original field increments the parent's version to a value greater than the deleted field's version.
+- The transaction that creates the new version of the same field assigns it a version greater than the parent's current version.
 
-So the version of the new `Field` instance is greater than the version of the deleted `Field`.
+So, the new `Field` instance will always have a version greater than the deleted one.
 
 ## Packages
 
-Move packages are also versioned and stored on chain, but follow a different versioning scheme to objects because they are immutable from their inception. This means that you refer to package transaction inputs (for example, the package that a function is from for a Move call transaction) by just their ID, and are always loaded at their latest version.
+Move packages are also versioned and stored on-chain, 
+though they follow a distinct versioning scheme because they are immutable once created.
+This means that when referencing a package in transaction inputs (such as the package a function belongs to in a Move call transaction),
+you only need to specify the package ID, and it will always be loaded at its latest version.
 
-### User packages
+### User Packages
 
-Every time you publish or upgrade a package, IOTA generates a new ID. A newly published package has its version set to 1, whereas an upgraded package's version is one greater than the package it is upgrading. Unlike objects, older versions of a package remain accessible even after being upgraded. For example, imagine a package `P` that is published and upgraded twice. It might be represented in the store as:
+Every time you publish or upgrade a package, IOTA generates a new ID.
+A newly published package starts with version 1,
+while an upgraded package has a version one greater than the previous version.
+Unlike objects, older package versions remain accessible even after an upgrade.
+For example, consider a package `P` that has been published and upgraded twice:
 
 ```
 (0x17fb7f87e48622257725f584949beac81539a3f4ff864317ad90357c37d82605, 1) => P v1
@@ -148,11 +196,16 @@ Every time you publish or upgrade a package, IOTA generates a new ID. A newly pu
 (0xd24cc3ec3e2877f085bc756337bf73ae6976c38c3d93a0dbaf8004505de980ef, 3) => P v3
 ```
 
-In this example, all three versions of the same package are at different IDs. The packages have increasing versions but it is possible to call into `v1`, even though `v2` and `v3` exist on chain.
+In this example, each version of the package has a unique ID.
+Despite the existence of `v2` and `v3`, you can still call functions in `v1`.
 
-### Framework packages
+### Framework Packages
 
-Framework packages (such as the Move standard library at `0x1`,the IOTA Framework at `0x2`, and IOTA System at `0x3`) are a special-case because their IDs must remain stable across upgrades. The network can upgrade framework packages while preserving their IDs via a system transaction, but can only perform this operation on epoch boundaries because they are considered immutable like other packages. New versions of framework packages retain the same ID as their predecessor, but increment their version by one:
+Framework packages (such as the Move standard library at `0x1`, the IOTA Framework at `0x2`, and IOTA System at `0x3`)
+are unique in that their IDs must remain consistent across upgrades.
+The network can upgrade these packages while keeping their IDs stable through a system transaction,
+but this process can only occur at epoch boundaries since framework packages are considered immutable.
+New versions of framework packages share the same ID as their predecessors, but their version increments by one:
 
 
 ```
@@ -161,13 +214,18 @@ Framework packages (such as the Move standard library at `0x1`,the IOTA Framewor
 (0x1, 3) => MoveStdlib v3
 ```
 
-The prior example shows the on-chain representation of the first three versions of the Move standard library.
+This example shows how the first three versions of the Move standard library would be represented on-chain.
 
-### Package versions
+### Package Versions
 
-IOTA smart contracts are organized into upgradeable packages and, as a result, multiple versions of any given package can exist on chain. Before someone can use an on-chain package, you must publish its first, original version. When you upgrade a package, you create a new version of that package. Each upgrade of a package is based on the immediately preceding version of that package in the versions history. In other words, you can upgrade the `nth` version of a package from only the `nth - 1` version. For example, you can upgrade a package from version 1 to 2, but afterwards you can upgrade that package only from version 2 to 3; you're not allowed to upgrade from version 1 to 3.
+IOTA smart contracts are organized into upgradeable packages,
+meaning that multiple versions of a given package can coexist on-chain.
+Before a package can be used, you must first publish its initial version.
+When upgrading a package, you create a new version, and each upgrade builds on the immediately preceding version in the version history.
+This means that you can only upgrade from the `nth` version to the `(n+1)th` version.
+For instance, after upgrading from version 1 to 2, you can only upgrade from version 2 to 3, not directly from version 1 to 3.
 
-There is a notion of versioning in package manifest files, existing in both the package section and in the dependencies section. For example, consider the manifest code that follows:
+Versioning also exists in package manifest files, both in the package section and the dependencies section. Consider the following example of manifest code:
 
 ```toml
 [package]
@@ -179,4 +237,11 @@ edition = "2024.beta"
 another_pkg = { git = "https://github.com/another_pkg/another_pkg.git" , version = "2.0.0"}
 ```
 
-At this point, the version references in the manifest are used only for user-level documentation as the `publish` and `upgrade` commands do not leverage this information. If you publish a package with a certain package version in the manifest file and then modify and re-publish the same package with a different version (using `publish` command rather than `upgrade` command), the two are considered different packages, rather than on-chain versions of the same package. You cannot use any of these packages as a dependency override to stand in for the other one. While you can specify this type of override when building a package, it results in an error when publishing or upgrading on chain.
+The version references in the manifest serve primarily for user-level documentation,
+as the `publish` and `upgrade` commands do not utilize this information.
+If you publish a package with a certain version in the manifest file,
+and later modify and re-publish it with a different version (using the `publish` command instead of `upgrade`),
+these are treated as different packages rather than versions of the same package on-chain.
+Consequently, you cannot use one package as a dependency override for the other.
+While you can specify such an override during the build process,
+it will result in an error during publishing or upgrading on-chain.
